Add hostgroup Mongodb-nodes

--- a/deployment/puppet/nagios/files/common/etc/nagios3/conf.d/hostgroups-fixed.cfg
+++ b/deployment/puppet/nagios/files/common/etc/nagios3/conf.d/hostgroups-fixed.cfg
@@ -32,3 +32,8 @@ define hostgroup {
 	alias                          Swift-proxy
 	hostgroup_name                 swift-proxy
 }
+
+define hostgroup {
+	alias                          Mongodb-nodes
+	hostgroup_name                 mongodb-nodes
+}
