Add config for installing mongodb and ceph-osd checks

--- a/deployment/puppet/nagios/templates/openstack/sample_services.cfg
+++ b/deployment/puppet/nagios/templates/openstack/sample_services.cfg
@@ -187,3 +187,15 @@ define service{
 #
 # FOR OBJECT STORAGE NODES
 #
+
+#
+# FOR MONGODB NODES
+#
+
+#MONGODB
+define service{
+        use                             default-service
+        hostgroup_name                  mongodb-nodes
+        service_description             mongodb
+        check_command                   check_mongodb
+        }
